--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Efa Bassey <efacb111@gmail.com>
+Godswill Bassey <swillassey@gmail.com>
